{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "7b706d1d-9c09-4bc3-ae0f-1d3a368f959b",
            "actions": [
                {
                    "name": "LeftMouse",
                    "type": "Button",
                    "id": "a7e2805a-8275-4cac-8534-a28bcc8cab2d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightMouse",
                    "type": "Button",
                    "id": "1aa1ad60-87bc-4dfb-85f7-fe7d212833db",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Space",
                    "type": "Button",
                    "id": "dce49708-b65a-4510-bf81-c6f0aba1d7f5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AutoTarget",
                    "type": "Button",
                    "id": "19e552af-b896-40db-a7a9-23c871d42f71",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e0ea8b35-8b1d-488a-a6fe-c15c9c1522cd",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4d04329e-30e9-45d2-9046-82f7e4f357d3",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightMouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d9314bb3-c84b-440f-acb8-bf2bd10ddf3f",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Space",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "83cd2b06-ad24-4b59-a380-6f5f28b9b0d7",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AutoTarget",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}